--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,15 @@
 /public/storage
 /storage/*.key
 /vendor
-.env
-.env.backup
-.phpunit.result.cache
-docker-compose.override.yml
-Homestead.json
-Homestead.yaml
-npm-debug.log
-yarn-error.log
+/.env
+/.env.backup
+/.phpunit.result.cache
+/docker-compose.override.yml
+/Homestead.json
+/Homestead.yaml
+/npm-debug.log
+/yarn-error.log
 /.idea
 /.vscode
+/.editorconfig
+/.gitattributes
